# IOT-Monitoring-Simulator

./: Barrier.cpp  CMakeLists.txt  README.md  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  TP.pro  main.cpp
Sensor/: Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Sensor.cpp  Sensor.h  Sensor.hpp  Sound.cpp  Sound.hpp  Temperature.cpp  Temperature.hpp
form/: mainwindow.ui
headers/: Barrier.hpp  Humidity.hpp  Light.hpp  Scheduler.hpp  Server.hpp  Sound.hpp  Temperature.hpp  diagramwidget.h  mainwindow.h
src/: Barrier.cpp  Scheduler.cpp  Server.cpp  diagramwidget.cpp  main.cpp  mainwindow.cpp
src/Sensor/: Humidity.cpp  Light.cpp  Sensor.cpp  Sensor.h  Sensor.hpp  Sound.cpp  Temperature.cpp
